--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "a1i5gxoVXHxc0Vp3Qfcxqy",
+    "id" : "4yYLLNKxvOMjBXn3HlAWEf",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OUH"
+        "repoHandle" : "01001O17000000000OW7"
       },
       "contextAttributes" : [ {
         "name" : "id",
