--- a/Explore/VCS_DRS_ZDT/.VCS_DRS_ZDT.Project.json
+++ b/Explore/VCS_DRS_ZDT/.VCS_DRS_ZDT.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "g6iJPRcQK4lh49cOSyBF0v",
+    "id" : "6KWHjD7Hxq2ebiLsaLW8af",
     "name" : "VCS_DRS_ZDT",
     "type" : "Project",
     "metadata" : {
