Automation summary for Force Undo Checkout testsM2QzYTQ3MjktMjQ0Ny00YT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "0Z5NlGS5CNtjMaxE5ajJUa",
+    "id" : "fzYChWRhNA7hiEMG8pWpeB",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
