Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "6bO9DaMlhTRb9tuAwkc1Q0",
+    "id" : "dFC7TnRy0GSd7ganqZAb0Z",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
