Automation summary for Force Undo Checkout testsMzRlMTNkNzAtMjQzYy00NW
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "fzYChWRhNA7hiEMG8pWpeB",
+    "id" : "b90gPqEdYUYbStnRnwQ0Kz",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
