Automation summary for Force Undo Checkout testsN2JlZTYyNmYtZGRiOS00ZT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "b90gPqEdYUYbStnRnwQ0Kz",
+    "id" : "7FhsFLXax2chE4nPD4Pt6Q",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
