--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "1G6hU4DTXbacNoEFrquVYc",
+    "id" : "7zDTwSFtJhzhoNITmJCqgI",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "010OFW170000000006WL"
+        "repoHandle" : "010OFW170000000006XM"
       },
       "contextAttributes" : [ {
         "name" : "id",
