Automation summary for Force Undo Checkout testsNzliNzRhMjQtMmY4MC00Nz
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7FhsFLXax2chE4nPD4Pt6Q",
+    "id" : "aaBBGloiglCk5ES2JOlIYe",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
