--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "g80s6I4KqqreZyTZAKHSYR",
+    "id" : "4NKoLzIcIORd08F526Ffc4",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "010OFW170000000006XK"
+        "repoHandle" : "010OFW170000000006XX"
       },
       "contextAttributes" : [ {
         "name" : "id",
