Automation summary for Force Undo Checkout testsYjJhZTA4NjItODA5NC00Yj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "aaBBGloiglCk5ES2JOlIYe",
+    "id" : "kUVQ7N8CTejdv99fV8BeAJ",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
